--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Recommendation System</title>
-    <link rel="stylesheet" href="static\styles.css">
+    <link rel="stylesheet" href="static/styles.css">
     <script type="text/javascript">
         function validateForm() {
             var cityInput = document.forms["cityForm"]["city"].value;
