--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,9 @@
             <div class="youtube-display">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/{{ video_id }}" frameborder="0" allowfullscreen></iframe>
             </div>
-            
+            <div class="song-counter">
+                <p>Songs Listened: {{ songs_listened }}/20</p>
+            </div>
             <section class="reaction-buttons">
                 <form action="/" method="post">
                     <button type="submit" name="reaction" value="like" class="like-button">Like</button>
