--- a/static/styles.css
+++ b/static/styles.css
@@ -102,3 +102,9 @@ body, html {
 .like-button:active, .dislike-button:active {
     transform: scale(0.95);
 }
+.song-counter {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 1.1em;
+    color: #333;
+}
