--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/{{ video_id }}" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="song-counter">
-                <p>Songs Listened: {{ songs_listened }}/20</p>
+                <p>Liked song: {{ amount_of_like }}/3</p>
             </div>
             <section class="reaction-buttons">
                 <form action="/" method="post">
