--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,7 @@
             </div>
             <div class="song-counter">
                 <p>Liked song: {{ amount_of_like }}/3</p>
+                <p>Listened song: {{songs_listened}}</p>
             </div>
             <section class="reaction-buttons">
                 <form action="/" method="post">
